--- a/src/Components/Slide.css
+++ b/src/Components/Slide.css
@@ -1,5 +1,15 @@
 .slide-container {
-  width: 70%;
-  margin: auto; }
+  width: 60%;
+  margin: 0 auto; 
+  margin-top: 4%;
+  margin-left: 20%;
+  box-shadow: -1px -1px 7px 0px #00000078;
+}
 
-  
+.react-slideshow-zoom-wrapper{
+  width: 100% !important;
+}
+
+.react-slideshow-container{
+  width: 100%
+}
