--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,18 @@
 body{
-  background-image: url('.\Assets\BL-Background.jpg')
+  background-image: url('.\Assets\BL-Background.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover; 
+  background-size: cover; 
 }
 
 .App {
   text-align: center;
 }
 
-
-/* Header css */
-
-.hdr-img-ctr{
-  height: 15.4vh;
-
-  background: black;
-
-}
-
-.blk-banner{
-  height: 80%;
-  margin-top: 10px;
-
-}
 
 
 /* Nav css */
@@ -34,6 +26,7 @@ body{
     margin-left: 15px;
     padding: 10px;
     position: fixed;
+    bottom: 3%;
 }
 
 #nav-btn{
@@ -46,6 +39,21 @@ body{
   box-shadow: -2px 2px 2px 1px #716e6e;
   transition: 0.5s;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 1000px) {
+
+  .sidebar{
+    justify-content: unset;
+    margin: 4% auto;
+    width: 60%;
+    position: relative;
+  }
+
+  #nav-btn{
+    margin-bottom: 5%;
+  }
+
 }
 
 
