responsive contact page

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ body{
     margin: 4% auto;
     width: 60%;
     position: relative;
+    height: fit-content;
   }
 
   #nav-btn{
@@ -150,7 +151,32 @@ ul{
   list-style: none;
 }
 
-/* team css */
+
+@media only screen and (max-width: 1000px) {
+
+  .contact-ctr{
+    height: fit-content;
+    width: 100%;
+  }
+
+  .map-subctr{
+    width: 90%;
+  }
+
+  .fb-ctr{
+    width: 90%;
+  }
+
+  Iframe{
+    width: 100%;
+  }
+
+  .map-comp{
+    width: 100%;
+  }
+}
+
+/* team css --------------------------------------------------*/
 
 .emp-ctr{
   width: 75%;
@@ -247,7 +273,46 @@ ul{
   border-radius: 5px;
 }
 
+@media only screen and (max-width: 1400px) {
+  .about-ctr{
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 1.5%;
+  }
 
+}
+
+@media only screen and (max-width: 1000px) {
+  .about-ctr{
+  width: 99%;
+  margin: 0 auto;
+  margin-top: 1.5%;
+  }
+  .about-center {
+    width: 90%;
+  }
+
+}
+
+/* --------footer--------------- */
+
+.ftr-ctr{
+  position: absolute;
+    top: 96.9%;
+    width: 100%;
+    background: black;
+}
+
+.ftr-ctr p{
+  margin: 4px;
+  color: grey;
+}
+
+@media only screen and (max-width: 1000px) {
+  .ftr-ctr{
+    display: none;
+  }
+}
 
 
 
