--- a/src/Components/Slide.css
+++ b/src/Components/Slide.css
@@ -15,11 +15,12 @@
 }
 
 
-/* @media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) {
  
   .slide-container{
     width: 90%;
+    height: auto;
     margin-left: 5%;
   }
 
-} */
+}
