--- a/src/Components/Slide.css
+++ b/src/Components/Slide.css
@@ -25,7 +25,6 @@
 
 .GalleryCtr{
   margin-top: 7%;
-  height: 25vh;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -35,5 +34,7 @@
     height: auto;
     margin-left: 5%;
   } */
-
+  .GalleryCtr{
+    height: 25vh;
+  }
 }
