--- a/src/Routes/About.css
+++ b/src/Routes/About.css
@@ -13,6 +13,8 @@
   border-radius: 5px;
   box-shadow: -1px 1px 6px 1px #4e4c4c;
   padding: 1px 15px 5px 15px;
+  height: 75vh;
+  overflow: scroll;
 }
 
 #abt-cs{
