scrollbar css relocated globally

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,25 @@ body{
   cursor: pointer;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff00; 
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: rgba(5, 5, 5, 0);
+  border-radius: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(253, 253, 253, 0); 
+}
+
 @media only screen and (max-width: 1000px) {
 
   .sidebar{
