team page formatted for mobile

--- a/src/Routes/Team.css
+++ b/src/Routes/Team.css
@@ -73,3 +73,19 @@
   box-shadow: -1px 1px 6px 1px #4e4c4c;
 }
 
+@media only screen and (max-width: 1000px) {
+
+  .emp-owner, .emp-mgr, .emp-emp{
+    display: block;
+  }
+
+  .tm-owner, .tm-manager, .tm-employee{
+    width: 100%;
+  }
+
+  .emp-ctr{
+    overflow: auto;
+    height: fit-content;
+  }
+
+}
